# KIcon

./: .gitattributes  .gitignore  .gitlab-ci.yml  COPYING  Pipfile  README.md  convert.bat  convert.sh  cspell.json  pyproject.toml  tool.py
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
src/: how_to.md
web/source/: conf.py  icon.rst  index.rst  jpeg.rst  license.rst  png.rst
web/source/locales/en/LC_MESSAGES/: icon.po  index.po  jpeg.po  license.po  png.po
