[tool.poetry]
name = "kicon"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = [{ include = "web/source" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.7"
sphinx = "^7.2.6"
sphinx-orange-book-theme = "^0.3.0"
sphinxext-opengraph = "^0.9.1"
sphinx-jinja = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
doc8 = "^1.1.1"
sphinx-autobuild = "^2021.3.14"
sphinx-intl = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
