[tool.poetry]
name = "kicon"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = [{ include = "web/source" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = "^8.1.7"
sphinx = "^7.3.7"
sphinx-orange-book-theme = "^0.11.0"
sphinxext-opengraph = "^0.9.1"
sphinx-jinja = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
doc8 = "^1.1.1"
sphinx-autobuild = "^2024.4.16"
sphinx-intl = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
