[tool.poetry]
name = "kicon"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = [{ include = "web/source" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
click = "^8.1.8"
sphinx = "^8.1.3"
sphinx-orange-book-theme = "^0.15.0"
sphinxext-opengraph = "^0.9.1"
sphinx-jinja = "^2.0.2"
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
doc8 = "^1.1.2"
sphinx-autobuild = "^2024.10.3"
sphinx-intl = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
